--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,27 @@
   <script src="../glint.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
   <style src = "styles.css" type="text/css"></style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body ng-app="glint" ng-controller="MainCtrl">
+  <div class="container-fluid nav-bar-custom">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <a href="index.html"><img src="" class="logo" alt="logo"></a>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">User</a></li>
+        <li><a href="#">Messages</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="app.html">Watch Now</a></li>
+        <li><a class ="login" href="#">Login</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+        
+    </div>
+  </div>
 
 </body>
 </html>
