--- a/client/index.html
+++ b/client/index.html
@@ -25,11 +25,12 @@
     <h1>What's your great idea?</h1>
     <form class="navbar-form navbar-middle" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Enter idea here">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
   </div>
+  
   <div class="row idea-post">
     <div class="col-md-1">
     </div>
@@ -44,8 +45,37 @@
         <h5>Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
       </div>
     </div>
-    <div class="col-md-2">
-      <i class="fa fa-comments"></i>
+    <div class="col-md-1">
+      <div class="comments-wrapper">
+        <i class="fa fa-comments"></i>
+        532
+      </div>
+    </div>
+    <div class="col-md-1">
+    </div>
+  </div>
+
+  <div class="row idea-post">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-1 upvote-downvote-wrapper">
+      <i class="fa fa-sort-asc"></i>
+      <div class="karma-points">53</div>
+      <i class="fa fa-sort-desc"></i>
+    </div>
+    <div class="col-md-8">
+      <div class="idea-wrapper">
+        <h3 class="idea-title">An uber for cats</h3>
+        <h5>Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="comments-wrapper">
+        <i class="fa fa-comments"></i>
+        532
+      </div>
+    </div>
+    <div class="col-md-1">
     </div>
   </div>
 
