--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="glint" ng-controller="MainCtrl">
   <div class="container-fluid nav-bar-custom">
@@ -31,53 +32,35 @@
     </form>
   </div>
   
+
+  <!-- Idea Row -->
   <div class="row idea-post">
     <div class="col-md-1">
     </div>
     <div class="col-md-1 upvote-downvote-wrapper">
       <i class="fa fa-sort-asc"></i>
-      <div class="karma-points">53</div>
+      <div class="karma-points">342</div>
       <i class="fa fa-sort-desc"></i>
     </div>
     <div class="col-md-8">
       <div class="idea-wrapper">
         <h3 class="idea-title">An uber for cats</h3>
-        <h5>Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
+        <h5 class="idea-description">Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
+        <p class="timestamp-author">Submitted 4 hours ago by Super Tom</p>
       </div>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-1 ">
       <div class="comments-wrapper">
         <i class="fa fa-comments"></i>
-        532
+        <p>532</p>
       </div>
     </div>
     <div class="col-md-1">
     </div>
   </div>
 
-  <div class="row idea-post">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-1 upvote-downvote-wrapper">
-      <i class="fa fa-sort-asc"></i>
-      <div class="karma-points">53</div>
-      <i class="fa fa-sort-desc"></i>
-    </div>
-    <div class="col-md-8">
-      <div class="idea-wrapper">
-        <h3 class="idea-title">An uber for cats</h3>
-        <h5>Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="comments-wrapper">
-        <i class="fa fa-comments"></i>
-        532
-      </div>
-    </div>
-    <div class="col-md-1">
-    </div>
-  </div>
+
+
 
 
 </body>
