Change example text

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,6 @@
 <body ng-app="glint" ng-controller="MainCtrl">
   <div class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <!-- <a href="index.html"><img src="" class="logo" alt="logo"></a> -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">User</a></li>
         <li><a href="#">Messages</a></li>
@@ -44,7 +43,7 @@
     </div>
     <div class="col-md-8">
       <div class="idea-wrapper">
-        <h3 class="idea-title">An uber for cats</h3>
+        <h3 class="idea-title">Uber for cats</h3>
         <h5 class="idea-description">Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
         <p class="timestamp-author">Submitted 4 hours ago by Super Tom</p>
       </div>
