--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Glint</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
+
 <body ng-app="glint" ng-controller="MainCtrl">
   <div class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -25,9 +27,9 @@
     <h1>What's your great idea?</h1>
     <form class="navbar-form navbar-middle" ng-controller="SubmitIdea as submit">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Enter idea here">
+        <input type="text" class="form-control" placeholder="Enter idea here" ng-model="submit.ideaEntry">
       </div>
-      <button type="submit" class="btn btn-default" ng-click="submit.submit()">Submit</button>
+      <button type="submit" class="btn btn-default" ng-click="submit.submitIdea()">Submit</button>
     </form>
   </div>
   
@@ -57,10 +59,6 @@
     <div class="col-md-1">
     </div>
   </div>
-
-
-
-
 
 </body>
 </html>
