--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,13 @@
 
 <head>
   <title>Glint</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
-  <script src="glint.js"></script>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-app="glint" ng-controller="MainCtrl">
+<body ng-app="glint" ng-controller="MainCtrl as mctrl">
   <div class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
@@ -35,7 +33,7 @@
   
 
   <!-- Idea Row -->
-  <div class="row idea-post">
+  <div class="row idea-post" ng-repeat="idea in mctrl.ideas"> 
     <div class="col-md-1">
     </div>
     <div class="col-md-1 upvote-downvote-wrapper">
@@ -45,9 +43,9 @@
     </div>
     <div class="col-md-8">
       <div class="idea-wrapper">
-        <h3 class="idea-title">Uber for cats</h3>
-        <h5 class="idea-description">Imagine a world where cats can roam free and never have to walk again! Introducting Uber for ca...</h5>
-        <p class="timestamp-author">Submitted 4 hours ago by Super Tom</p>
+        <h3 class="idea-title">{{ idea.title }}</h3>
+        <h5 class="idea-description">{{ idea.text }}</h5>
+        <p class="timestamp-author">Submitted {{ idea.created_at }} by {{ idea.created_by }}</p>
       </div>
     </div>
     <div class="col-md-1 ">
@@ -60,5 +58,7 @@
     </div>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+  <script src="glint.js"></script>
 </body>
 </html>
