Add in services & update test skeleton
- services.js file
- factory for Votes
- tests for controller functions
- update index.html with vote interpolation

--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
       <i class="fa fa-sort-asc"></i> <!-- upvote -->
-      <div class="vote-points">342</div>
+      <div class="vote-points">{{ idea.votes }}</div>
       <i class="fa fa-sort-desc"></i> <!-- downvote -->
     </div>
     <div class="col-md-8">
