(fix) Add script tag to include dependent script

--- a/client/index.html
+++ b/client/index.html
@@ -60,5 +60,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
   <script src="glint.js"></script>
+  <script src="services.js"></script>
 </body>
 </html>
