--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
   <script src="glint.js"></script>
   <script src="services.js"></script>
 </body>
