Implement sorting of ideas based on amount of votes
- Add more placeholder data to controller

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
   
 
   <!-- Idea Row -->
-  <div class="row idea-post" ng-repeat="idea in mctrl.ideas"> 
+  <div class="row idea-post" ng-repeat="idea in mctrl.ideas | orderBy: '-votes'"> 
     <div class="col-md-1">
     </div>
 
