--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
     <h1>What's your great idea?</h1>
     <form class="navbar-form navbar-middle" ng-submit="submit.submitIdea()" ng-controller="SubmitIdeaCtrl as submit">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Enter idea here" ng-model="submit.ideaEntry">
+        <input name="idea-input" type="text" class="form-control" placeholder="Enter idea here" ng-model="submit.ideaEntry" required>
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
