--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@
         <div class="idea-wrapper">
           <h3 class="idea-title">{{ idea.title }}</h3>
           <h5 class="idea-description">{{ idea.text | limitTo: 130 }}{{ idea.text.length > 130 ? '...' : ''}}</h5>
-          <p class="timestamp-author">Submitted {{ idea.created_at }} by {{ idea.created_by }}</p>
+          <p class="timestamp-author">Submitted {{ idea.created_at | moment }} by {{ idea.created_by }}</p>
         </div>
       </div>
       <div class="col-md-1 ">
