--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
         <li><a href="#">User</a></li>
         <li><a href="#">Messages</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a class ="login" href="#">Login</a></li>
+        <li><a class ="login" href="login.html">Login</a></li>
         <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
