--- a/client/index.html
+++ b/client/index.html
@@ -32,12 +32,12 @@
   </div>
   
   <!-- User Feedback Message Area -->
-  <div class="user-feedback-container" ng-show="ictrl.postSuccess">
+  <div class="user-feedback-container ng-cloak" ng-show="ictrl.postSuccess">
     <span class="post-idea-success" ng-click="ictrl.postSuccess = !ictrl.postSuccess">Your idea has been posted.</span>
   </div>
 
   <!-- Idea Row -->
-  <div class="row idea-post" ng-repeat="idea in ictrl.data.ideas | orderBy: '-votes'"> 
+  <div class="row idea-post ng-cloak" ng-repeat="idea in ictrl.data.ideas | orderBy: '-votes'"> 
     <div class="col-md-1">
     </div>
 
