(feat) Flesh out upvote/downvote & updateVotes functions
- pass along idea object from ng-click function calls
- console.log results only for now in view
- Votes service moved below Ideas for consistency across files

--- a/client/index.html
+++ b/client/index.html
@@ -43,9 +43,9 @@
 
     <div class="idea-container">
       <div class="col-md-1 upvote-downvote-wrapper" ng-controller="VotesCtrl as vctrl">
-        <i class="fa fa-sort-asc" ng-click="vctrl.upvote()"></i> <!-- upvote -->
+        <i class="fa fa-sort-asc" ng-click="vctrl.upvote(idea)"></i> <!-- upvote -->
         <div class="vote-points">{{ idea.votes }}</div>
-        <i class="fa fa-sort-desc" ng-click="vctrl.downvote()"></i> <!-- downvote -->
+        <i class="fa fa-sort-desc" ng-click="vctrl.downvote(idea)"></i> <!-- downvote -->
       </div>
       <div class="col-md-8">
         <div class="idea-wrapper">
