--- a/client/login.html
+++ b/client/login.html
@@ -10,8 +10,12 @@
 </head>
 
 <body ng-app="glint" ng-controller="IdeasCtrl as ictrl">
-  <div class="container-fluid nav-bar-custom">
+  <nav class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+        <li class="nav-logo"><img src="assets/glint-logo-small.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</li>
+        <li><a href="#">Where programmers meet ideas</a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">User</a></li>
         <li><a href="#">Messages</a></li>
@@ -20,6 +24,23 @@
         <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
+  </nav>
+
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4 login-form">
+      <form class="form-signin">
+        <img class="logo-large" src="assets/glint-logo-large-teal.png" alt="">
+        <!-- <h2 class="form-signin-heading">Where programmers meet project ideas</h2> -->
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control login-form-input" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control login-form-input" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block login-button" type="submit">Login</button>
+        <p class="sign-up-here">Not registered? Sign up <a href="signup.html">here</a></p>
+      </form>
+    </div>
+    <div class="col-md-4"></div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
