--- a/client/login.html
+++ b/client/login.html
@@ -13,14 +13,15 @@
   <nav class="container-fluid nav-bar-custom">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li class="nav-logo"><img src="assets/glint-logo-small.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</li>
-        <li><a href="#">Where programmers meet ideas</a></li>
+        <li class="nav-logo">
+          <a class="glint-logo-icon" href="index.html"><img src="assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
+        <li class="tagline">Where programmers meet ideas</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">User</a></li>
         <li><a href="#">Messages</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a class ="login" href="login.html">Login</a></li>
+        <li><a class ="login" href="signup.html">Sign up</a></li>
         <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
@@ -31,7 +32,6 @@
     <div class="col-md-4 login-form">
       <form class="form-signin">
         <img class="logo-large" src="assets/glint-logo-large-teal.png" alt="">
-        <!-- <h2 class="form-signin-heading">Where programmers meet project ideas</h2> -->
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control login-form-input" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
