(refactor) Move login & signup pages to app/auth/

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">User</a></li>
         <li><a href="#">Messages</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a class ="login" href="login.html">Login</a></li>
+        <li><a class ="login" href="app/auth/login.html">Login</a></li>
         <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
