--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Glint</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="../../styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <li class="nav-logo">
-          <a class="glint-logo-icon" href="index.html"><img src="assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
+          <a class="glint-logo-icon" href="../../index.html"><img src="../../assets/glint-logo-small.png" alt=""></a>&nbsp;&nbsp;&nbsp;|</li>
         <li class="tagline">Where programmers meet ideas</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -31,7 +31,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4 login-form">
       <form class="form-signin">
-        <img class="logo-large" src="assets/glint-logo-large-teal.png" alt="">
+        <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control login-form-input" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
@@ -46,7 +46,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
-  <script src="glint.js"></script>
-  <script src="services.js"></script>
+  <script src="../glint.js"></script>
+  <script src="../../common/services.js"></script>
 </body>
 </html>
