--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <!-- Idea Row -->
-  <div class="row idea-post ng-cloak" ng-repeat="idea in ictrl.data.ideas | orderBy: '-votes'"> 
+  <div class="row idea-post ng-cloak" ng-repeat="idea in ictrl.data.ideas track by idea._id"> 
     <div class="col-md-1">
     </div>
 
