(feature) Refactor styles to be specific to class instead of globally

--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <!-- Idea Row -->
-  <div class="row idea-post ng-cloak" ng-repeat="idea in ictrl.data.ideas track by idea._id"> 
+  <div class="row idea-post ng-cloak idea-post-repeat" ng-repeat="idea in ictrl.data.ideas track by idea._id"> 
     <div class="col-md-1">
     </div>
 
