--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,12 @@
         <li class="tagline">Where programmers meet ideas</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">User</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">FAQ</a></li>
+      
+        <!-- <li><a href="#">User</a></li> -->
+        <!-- <li><a href="#">Messages</a></li> -->
+        <!-- <li><a href="#">FAQ</a></li> -->
         <li><a class ="login" href="app/auth/login.html">Login</a></li>
-        <li><a href="#"><i class="fa fa-plus"></i></a></li>
+        <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
       </ul>
     </div>
   </nav>
@@ -88,5 +89,6 @@
   <script src="common/services.js"></script>
   <script src="app/ideas/ideas.js"></script>
   <script src="app/votes/votes.js"></script>
+  <script src="app/auth/auth.js"></script>
 </body>
 </html>
