--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -18,11 +18,7 @@
         <li class="tagline">Where programmers meet ideas</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">User</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">FAQ</a></li>
         <li><a class ="login" href="signup.html">Sign up</a></li>
-        <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
   </nav>
@@ -32,6 +28,7 @@
     <div class="col-md-4 login-form" ng-controller="AuthCtrl as actrl">
       <form class="form-signin" name="signinForm" ng-submit="signinForm.$valid && ctrl.login()" /novalidate>
         <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
+        
         <label for="inputUsername" class="sr-only">Email address</label>
         <p class="error" ng-show="signinForm.username.$error.required">Required Field</p>
         <input type="text" name="username" ng-model="actrl.user.username" id="inputUsername" class="form-control login-form-input" placeholder="Username" required autofocus>
@@ -52,5 +49,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
   <script src="../glint.js"></script>
   <script src="../../common/services.js"></script>
+  <script src="app/auth/auth.js"></script>
 </body>
 </html>
