--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -18,25 +18,26 @@
         <li class="tagline">Where programmers meet ideas</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">User</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">FAQ</a></li>
         <li><a class ="login" href="login.html">Login</a></li>
-        <li><a href="#"><i class="fa fa-plus"></i></a></li>
       </ul>
     </div>
   </nav>
 
   <div class="row">
     <div class="col-md-4"></div>
-    <div class="col-md-4 login-form">
-      <form class="form-signin">
+    <div class="col-md-4 login-form" ng-controller="AuthCtrl as actrl">
+      <form class="form-signin" name="signupForm" ng-submit="signupForm.$valid && ctrl.signup()" /novalidate>
         <img class="logo-large" src="../../assets/glint-logo-large-teal.png" alt="">
+
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control login-form-input" placeholder="Email address" required autofocus>
+        <p class="error" ng-show="signupForm.username.$error.required">Required Field</p>
+        <input type="text" name="username" ng-model="actrl.user.username" id="inputUsername" class="form-control login-form-input" placeholder="Username" required autofocus>
+
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control login-form-input" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block login-button" type="submit">Sign up</button>
+        <p class="error" ng-show="signupForm.password.$error.required">Required Field</p>
+        <input type="password" name="password" ng-model="actrl.user.password" id="inputPassword" class="form-control login-form-input" placeholder="Password" required>
+
+        <button class="btn btn-lg btn-primary btn-block login-button" type="submit" ng-disable="signupForm.$invalid">Sign up</button>
         <p class="sign-up-here">Already registered? Login <a href="login.html">here</a></p>
       </form>
     </div>
@@ -48,5 +49,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
   <script src="../glint.js"></script>
   <script src="../../common/services.js"></script>
+  <script src="app/auth/auth.js"></script>
 </body>
 </html>
