(feat) Add in basic skeleton for comments feature
- create app/comments/ directory
- create controller
- create Comments factory in services.js
- create 5 unit tests in comments.spec.js
- add comments dependencies in index.html, glint.js
- add comments files to karma.conf.js and Gruntfile.js

--- a/client/index.html
+++ b/client/index.html
@@ -90,5 +90,6 @@
   <script src="app/ideas/ideas.js"></script>
   <script src="app/votes/votes.js"></script>
   <script src="app/auth/auth.js"></script>
+  <script src="app/comments/comments.js"></script>
 </body>
 </html>
