--- a/client/app/ideas/ideas.html
+++ b/client/app/ideas/ideas.html
@@ -17,8 +17,8 @@
 </div>
 
 <!-- User Feedback Message Area -->
-<div class="user-feedback-container ng-cloak" ng-show="ictrl.postSuccess">
-  <span class="post-idea-success" ng-click="ictrl.postSuccess = !ictrl.postSuccess">Your idea has been posted.</span>
+<div class="user-feedback-container ng-cloak post-idea-animation" ng-if="ictrl.postSuccess" ng-click="ictrl.postSuccess = !ictrl.postSuccess">
+  <span class="post-idea-success">Your idea has been posted.</span>
 </div>
 
 <!-- Idea Row -->
