--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  	<meta charset="UTF-8">
+  	<title>Glint</title>
+  	<link rel="stylesheet" href="styles.css">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.5/animate.min.css">
+  	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  </head>
+
+  <body>
+
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+      <img src="assets/glint-large-white.png" alt="Glint">
+      <h2>Where programmers meet ideas</h2>
+      <div class="lead">
+        <a href="http://glintapp.azurewebsites.net/" class="btn btn-outline-inverse btn-lg visit-button">Use Glint</a>
+      </div>
+      <div class="github-buttons">
+        <iframe src="https://ghbtns.com/github-btn.html?user=adventurous-starfish&repo=glint&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+      </div>
+    </div>
+    
+    <!-- Header -->
+    <div class="row basic-summary">
+      <h1 class="basic-summary-bold">Find the next big idea!</h1>
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h3>A place for people looking for ideas and ideas looking for people.</h3>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+
+    <div class="half-rule"></div>
+
+    <!-- Description -->
+    <div class="row icons-row">
+      <div class="icons-wrapper">
+        <div class="col-md-4">
+          <i class="fa fa-code fa-5x"></i>
+          <h3>It's hard to find the right idea.</h3>
+          <p>You need a project to learn a new language or start a new company, but you don't know what to make You need a project to focus on, maybe something that could turn into a company. Glint has great ideas you can make while learning something new!<make class=""></make></p>
+        </div>
+        <div class="col-md-4">
+          <i class="fa fa-lightbulb-o fa-5x"></i>
+          <h3>You have an amazing idea.</h3>
+          <p>You have a great idea, but you don't even know where to get started making it happen. Collaborate with other passionate people to make your idea a reality!</p>
+        </div>
+        <div class="col-md-4">
+         <i class="fa fa-share-alt fa-5x"></i>
+         <h3>You want to give back.</h3>
+         <p>You have ideas filling up notebook after notebook, but much less time to execute on them. Help inspire others by sharing your ideas for other developers to work on and discuss!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="half-rule"></div>
+
+    <!-- Team -->
+    <div class="row team-row">
+      <div class="glint-team">
+        <h1>The Glint Team</h1>
+        <br>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="assets/team-kalev.jpg" alt="">
+          <h3 class="glint-name">Kalev Roomann-Kurrik</h3>
+          <h4>Project Manager</h4>
+          <p>"No dog can eat me."</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="assets/team-anneke.jpg" alt="">
+          <h3 class="glint-name">Anneke Floor</h3>
+          <h4>Scrum master</h4>
+          <p>"Ain't no party like a Liz Lemon party!"</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="assets/team-david.jpg" alt="">
+          <h3 class="glint-name">David Rabkin</h3>
+          <h4>Product Owner</h4>
+          <p>"We got the idea for Glint by using Glint."</p>
+        </div>
+        <div class="col-md-3">
+          <img class="img-circle team-members" src="assets/team-mike.jpg" alt="">
+          <h3 class="glint-name">Michael Hari</h3>
+          <h4>Development Team</h4>
+          <p>"David's quote is so meta."</p>
+        </div>    
+      </div>
+    </div>
+
+    <nav class="navbar navbar-default navbar-bottom" role="navigation">
+      <div class="row footer-bottom">
+        <div class="github-footer-link"><a href="https://github.com/adventurous-starfish/glint"><i class="fa fa-github fa-4x"></i></a></div>
+      </div>
+    </nav>
+
+  </body>
+
+</html>
