--- a/index.html
+++ b/index.html
@@ -69,24 +69,36 @@
           <h3 class="glint-name">Kalev Roomann-Kurrik</h3>
           <h4>Project Manager</h4>
           <p>"No dog can eat me."</p>
+          <a href="https://twitter.com/kalevrk" target="_blank"><i class="fa fa-twitter-square fa-2x social-icons"></i></a>
+          <a href="https://github.com/KalevRK" target="_blank"><i class="fa fa-github-square fa-2x social-icons"></i></a>
+          <a href="https://www.linkedin.com/in/kalevrk" target="_blank"><i class="fa fa-linkedin-square fa-2x social-icons"></i></a>
         </div>
         <div class="col-md-3">
           <img class="img-circle team-members" src="assets/team-anneke.jpg" alt="">
           <h3 class="glint-name">Anneke Floor</h3>
           <h4>Scrum master</h4>
           <p>"Ain't no party like a Liz Lemon party!"</p>
+          <a href="https://twitter.com/Anneke_Floor" target="_blank"><i class="fa fa-twitter-square fa-2x social-icons"></i></a>
+          <a href="https://github.com/annekef" target="_blank"><i class="fa fa-github-square fa-2x social-icons"></i></a>
+          <a href="https://www.linkedin.com/pub/anneke-floor/aa/432/ba3" target="_blank"><i class="fa fa-linkedin-square fa-2x social-icons"></i></a>
         </div>
         <div class="col-md-3">
           <img class="img-circle team-members" src="assets/team-david.jpg" alt="">
           <h3 class="glint-name">David Rabkin</h3>
           <h4>Product Owner</h4>
           <p>"We got the idea for Glint by using Glint."</p>
+          <a href="https://twitter.com/d_rab" target="_blank"><i class="fa fa-twitter-square fa-2x social-icons"></i></a>
+          <a href="https://github.com/Rudimental" target="_blank"><i class="fa fa-github-square fa-2x social-icons"></i></a>
+          <a href="https://www.linkedin.com/pub/david-rabkin/aa/b64/136" target="_blank"><i class="fa fa-linkedin-square fa-2x social-icons"></i></a>
         </div>
         <div class="col-md-3">
           <img class="img-circle team-members" src="assets/team-mike.jpg" alt="">
           <h3 class="glint-name">Michael Hari</h3>
           <h4>Development Team</h4>
           <p>"David's quote is so meta."</p>
+          <a href="http://twitter.com/millionhari" target="_blank"><i class="fa fa-twitter-square fa-2x social-icons"></i></a>
+          <a href="https://github.com/millionhari" target="_blank"><i class="fa fa-github-square fa-2x social-icons"></i></a>
+          <a href="http://www.linkedin.com/in/millionhari/" target="_blank"><i class="fa fa-linkedin-square fa-2x social-icons"></i></a>
         </div>    
       </div>
     </div>
