Add target blank to open new tab when clicking github icon in footer

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <nav class="navbar navbar-default navbar-bottom" role="navigation">
       <div class="row footer-bottom">
-        <div class="github-footer-link"><a href="https://github.com/adventurous-starfish/glint"><i class="fa fa-github fa-4x"></i></a></div>
+        <div class="github-footer-link"><a href="https://github.com/adventurous-starfish/glint" target="_blank"><i class="fa fa-github fa-4x"></i></a></div>
       </div>
     </nav>
 
