Changed header title in description page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="icons-wrapper">
         <div class="col-md-4">
           <i class="fa fa-code fa-5x"></i>
-          <h3>It's hard to find the right idea.</h3>
+          <h3>You're looking for a great idea.</h3>
           <p>You need a project to learn a new language or start a new company, but you don't know what to make You need a project to focus on, maybe something that could turn into a company. Glint has great ideas you can make while learning something new!<make class=""></make></p>
         </div>
         <div class="col-md-4">
