Change first page of docs to go to Glint.JS documentation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2>Where programmers meet ideas</h2>
       <div class="lead">
         <a href="http://glintapp.azurewebsites.net/" class="btn btn-outline-inverse btn-lg visit-button">Use Glint</a>
-        <a href="docs/auth.html" class="btn btn-outline-inverse btn-lg visit-button">View Docs</a>
+        <a href="docs/glint.html" class="btn btn-outline-inverse btn-lg visit-button">View Docs</a>
       </div>
       <div class="github-buttons">
         <iframe src="https://ghbtns.com/github-btn.html?user=adventurous-starfish&repo=glint&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
