Add about tab to navigation

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       
         <!-- <li><a href="#">User</a></li> -->
         <!-- <li><a href="#">Messages</a></li> -->
-        <!-- <li><a href="#">FAQ</a></li> -->
+        <li><a href="http://adventurous-starfish.github.io/glint/">About</a></li>
         <li><a class ="login" href="#/login">Login</a></li>
         <!-- <li><a href="#"><i class="fa fa-plus"></i></a></li> -->
       </ul>
